Sun Nov 24 03:41:56 1991  Per Cederqvist  (ceder at robert)

	* commands1.el (lyskom-write-comment-soon): Skrev lite kommentarer.

	* swedish-strings.el, english-strings.el: (comment-keep-recpt-p)
	  Ny text }t featuren nedan.

	* vars.el (kom-confirm-multiple-recipients): Ny variabel som g|r
	  att man kan st{nga av fr}gan nedan.

	* commands1.el (lyskom-comment-recipients): Om
	  kom-confirm-multiple-recipients {r non-nil s} m}ste anv{ndaren
	  trycka "j" f|r att bekr{fta att de ska st} kvar som mottagare i
	  kommentaren man skriver. Fr}gan st{lls n{r man trycker "k".

Tue Nov 12 23:40:16 1991  Linus Tolke Y  (linus at lysator)

	* vars.el, async.el, cache.el (lyskom-who-info-buffer-is-on): Ny
	  variabel som g|r att man kan st{nga av who-bufferten.

Fri Nov  8 13:51:32 1991  Linus Tolke Y  (linus at robert)

	* lyskom-rest.el, edit-text.el, commands2.el, vars.el:
	  lyskom-swascii-commands, lyskom-swascii-header-subject,
	  lyskom-swascii-header-separator, New variables, added to make it
	  possible to switch the value of kom-emacs-knows-iso-8859-1 after
	  loading.

Sat Nov  2 19:03:57 1991  Linus Tolke Y  (linus at robin)

	* commands1.el, swedish-strings.el (kom-add-copy): New command.

Mon Oct 28 23:29:39 1991  Linus Tolke Y  (linus at lysator)

	* commands2.el, swedish-strings.el (kom-compile-bug-report):
	  Rewritten to provide us with more information.

Mon Oct 28 11:39:21 1991  Per Cederqvist  (ceder at robin)

	* swedish-strings.el (lyskom-edit-mode-map): kom-edit-add-copy
	  (Extra Kopia) finns nu {ven p} "\C-cae", och inte bara p}
	  "\C-cak".

Fri Oct 25 16:22:03 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el (kom-save-text): read-file-name gets
	  iso-to-swascii converted prompt.

	* lyskom-rest.el (lyskom-maybe-do-when-starting): Now the commands
	  are executed with the kom-buffer as a selected-buffer.

	* vars.el (kom-page-before-command): Default nil.

Wed Oct 23 19:04:14 1991  Linus Tolke Y  (linus at ruben)
